Fix responsive modals (#457)
Fix horizontal scrolling in admin sections for mobile

--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -1,14 +1,10 @@
 .form {
-  padding-bottom: $spacer;
-}
-
-.form--fill-height {
   height: 100%;
   min-height: 0;
+  max-height: 100%;
   padding-bottom: 0;
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
 
   > fieldset {
     flex: 1;
@@ -16,6 +12,7 @@
   }
 
   > .btn-toolbar {
+    min-height: $toolbar-total-height;
     margin-bottom: 0;
     border-top: 1px solid $border-color;
     padding-top: 13px;
