--- a/client/src/styles/legacy/_style.scss
+++ b/client/src/styles/legacy/_style.scss
@@ -17,12 +17,7 @@
 html, body {
   width: 100%;
   height: 100%;
-  // Removes RHS whitespace on iPad
-  overflow-x: hidden;
-}
-
-body.cms {
-  overflow: hidden;
+  overflow-x: auto;
 }
 
 // --------------------------------------------
